# lumahdrv

./: .travis.yml  CMakeLists.txt  ChangeLog  LICENSE  README.md  config.h.in  lumadec.cpp  lumaenc.cpp  lumaplay.cpp
cmake/: FindEBML.cmake  FindMatroska.cmake  FindOpenEXR.cmake  FindPFS.cmake  FindVPX.cmake
doc/: lumadec.1  lumaenc.1  lumaplay.1
include/: arg_parser.h  exr_interface.h  lumaplay_gui_texture.h  pfs_interface.h
include/luma/: frame.h  luma_decoder.h  luma_encoder.h  luma_exception.h  luma_frame.h  luma_quantizer.h  mkv_interface.h
include/luma/ptfs/: ptf_jnd_ferwerda_10bit.h  ptf_jnd_ferwerda_11bit.h  ptf_jnd_ferwerda_12bit.h  ptf_jnd_hdrvdp_10bit.h  ptf_jnd_hdrvdp_11bit.h  ptf_jnd_hdrvdp_12bit.h
lib/ebml/: CMakeLists.txt
lib/ebml/src/: EbmlElement.cpp
lib/matroska/: CMakeLists.txt
src/: CMakeLists.txt  arg_parser.cpp  dequantizer.frag  exr_interface.cpp  luma_decoder.cpp  luma_encoder.cpp  luma_quantizer.cpp  lumaplay_dequantizer.frag  lumaplay_gui.frag  mkv_interface.cpp  mkv_interface_.cpp  mkv_interface_old(extensive).cpp  pfs_interface.cpp
test/: CMakeLists.txt  Makefile  test_simple_dec.cpp  test_simple_enc.cpp
